syntax = "proto3";
package BCICompetitionFramework.StimulationSystem.api.protobuf;


message RandomNumberSeedsMessage {
    float seeds = 1;
}



